--- a/Accueil.css
+++ b/Accueil.css
@@ -380,10 +380,10 @@ h3{
 }
 
 #Boxy{
-    margin-left: 8%;
-    margin-top: 13%;
-    width: 45%;
-    height: 40%;
+    margin-left: 5%;
+    margin-top: 11%;
+    width: 50%;
+    height: 45%;
     position: absolute;
 }
 
@@ -423,6 +423,32 @@ h3{
     margin-top: 11%;
     height: 15%;
     width: 12%;
+}
+
+#Arrow{
+    position: relative;
+    text-decoration: none;
+    float: left;
+    margin-left: 73.25%;
+    margin-top: 43%;
+    width: 5.25%;
+    height: 6.5%;
+}
+
+#Rub1{
+    position: absolute;
+    transition: opacity 300ms;
+    width: 100%;
+    height: 100%;
+}
+
+#Rub2{
+    position:absolute;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 300ms;
+    width: 100%;
+    height: 100%;
 }
 
 
