--- a/Accueil.css
+++ b/Accueil.css
@@ -97,9 +97,17 @@ header{
     margin-left: 0.5%;
     font-family: Ipixel;
     font-size: medium;
-    width: 28%;
+    width: 25%;
     height: 100%;
     float: left;
+}
+
+#Anime{
+    height: 90%;
+    width: auto;
+    float: left;
+    margin-right: -15%;
+    margin-top: 1%;
 }
 
 
@@ -163,7 +171,7 @@ p{
 
 
 #Crédit{
-    width: 40%;
+    width: 30%;
     height: 90%;
     float: right;
     margin-top: 1%;
